# crewai-instagram-example

./: 1-final-content-strategy.md  1-market_research.md  1-visual-content.md  2-final-content-strategy.md  2-market_research.md  2-visual-content.md  3-final-content-strategy.md  3-market_research.md  3-visual-content.md  README.md  pyproject.toml
src/linkedin/: crew.py  main.py
src/linkedin/config/: agents.yaml  tasks.yaml
src/linkedin/tools/: search.py
