[tool.poetry]
name = "linkedin"
version = "0.1.0"
description = "Linkedin using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.27.0"}

[tool.poetry.scripts]
linkedin = "linkedin.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"